// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionService UT applyModels() should call action and collect all input and output 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
    {
      "input.key1": "value1",
    },
    {},
  ],
]
`;

exports[`TransactionService UT applyModels() should call multiple actions and collect all input and output 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
    {
      "input.key1": "value1",
    },
    {},
  ],
]
`;

exports[`TransactionService UT applyModels() should call multiple actions and collect all input and output 2`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
    {
      "input.key2": "value2",
    },
    {},
  ],
]
`;

exports[`TransactionService UT applyModels() should only process 1 matching diff when duplicates found 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
  ],
]
`;

exports[`TransactionService UT applyModels() should process diffs in different levels 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
  ],
  [
    {
      "action": "add",
      "field": "regionId",
      "node": "region=region,app=app",
      "value": "region",
    },
  ],
]
`;

exports[`TransactionService UT applyResources() should only process 1 matching diff when duplicates found 1`] = `
[
  [
    {
      "action": "add",
      "field": "resourceId",
      "node": "test-resource=resource-1",
      "value": "resource-1",
    },
  ],
]
`;

exports[`TransactionService UT applyResources() should process diffs of resources per dependency graph 1`] = `
[
  [
    {
      "action": "add",
      "field": "resourceId",
      "node": "test-resource=resource-1",
      "value": "resource-1",
    },
  ],
  [
    {
      "action": "add",
      "field": "resourceId",
      "node": "test-resource=resource-2",
      "value": "resource-2",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldModelDiffs should yield model diffs 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldModelDiffs should yield model diffs with overlays 1`] = `
[
  [
    {
      "action": "add",
      "field": "anchor",
      "node": "test-overlay=test-overlay",
      "value": "anchorId=anchor-1",
    },
    {
      "action": "add",
      "field": "overlayId",
      "node": "test-overlay=test-overlay",
      "value": "test-overlay",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldModelTransaction should yield model transaction 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "node": "app=app",
      "value": "app",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldModelTransaction should yield model transaction with overlays 1`] = `
[
  [
    {
      "action": "add",
      "field": "anchor",
      "node": "test-overlay=test-overlay",
      "value": "anchorId=anchor-1",
    },
    {
      "action": "add",
      "field": "overlayId",
      "node": "test-overlay=test-overlay",
      "value": "test-overlay",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldResourceDiffs should yield resource diffs 1`] = `
[
  [
    {
      "action": "delete",
      "field": "resourceId",
      "node": "test-resource=resource-1",
      "value": "resource-1",
    },
    {
      "action": "add",
      "field": "resourceId",
      "node": "test-resource=resource-2",
      "value": "resource-2",
    },
  ],
  [],
]
`;

exports[`TransactionService UT beginTransaction() yieldResourceTransaction should yield resource transaction 1`] = `
[
  [
    {
      "action": "delete",
      "field": "resourceId",
      "node": "test-resource=resource-1",
      "value": "resource-1",
    },
    {
      "action": "add",
      "field": "resourceId",
      "node": "test-resource=resource-2",
      "value": "resource-2",
    },
  ],
]
`;
